<resources>
    <string name="app_name">SoundDemoApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="no_availble_feture">feature not supported....!</string>
    <string name="noisy">Noisy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="general">General</string>
    <string name="group">Group</string>
    <string name="quiet">Quiet</string>
    <string name="duration">Duration:</string>
    <string name="action_bar_title">Microphone</string>
    <string name="current">Current</string>
    <string name="db">decibels</string>
</resources>
